--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <meta name="keywords" content="개인포트폴리오 웹디자인 웹퍼블리셔 개인홈페이지">
     <meta name="og:image" content="https://jwdy02.github.io/img/eng3.png">
 
-    <title>JISU's PORTFOLIO::예비웹퍼블리셔444</title>
+    <title>JISU's PORTFOLIO::예비웹퍼블리셔</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <!-- //구글폰트 -->
