--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="개인포트폴리오 웹디자인 웹퍼블리셔 개인홈페이지">
     <meta name="og:image" content="https://jwdy02.github.io/img/eng3.png">
 
-    <title>JISU's PORTFOLIO::예비웹퍼블리셔</title>
+    <title>JISU's PORTFOLIO::예비웹퍼블리셔1122</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <!-- //구글폰트 -->
@@ -143,11 +143,11 @@
                 <h2 class="h2"><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></h2>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
-                    <li>이름 : 최지수</li>
-                    <li>생년월일 : 1xxx0x1x</li>
-                    <li>거주지 : 경기도 성남시</li>
-                    <li>학력 : 신구대학교 원예디자인과 플로리스트전공</li>
-                    <li>교육 : 모란 이젠it아카데미 웹디자인,웹퍼블리셔 5개월 과정 수료</li>
+                    <li><span>이름</span> : 최지수</li>
+                    <li><span>생년월일</span> : 1xxx0x1x</li>
+                    <li><span>거주지</span> : 경기도 성남시</li>
+                    <li><span>학력</span> : 신구대학교 원예디자인과 플로리스트전공</li>
+                    <li><span>교육</span> : 모란 이젠it아카데미 웹디자인,웹퍼블리셔 5개월 과정 수료</li>
                 </ul>
             </div>
         </section>
