--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         }
     )
     </script>
-<!-- 슬릭 -->
+    <!-- 슬릭 -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -114,6 +114,15 @@
             }
         );
     </script>
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        $(document).ready(function(){
+            AOS.init();
+        });
+    </script>
+
 </head>
 <body>
     <!-- 상단영역 -->
@@ -140,7 +149,7 @@
         <!-- 어바웃 -->
         <section id="about" class="paddingT50 paddingB50 vh100">
             <div class="wrap">
-                <h2 class="h2"><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></h2>
+                <h2 class="h2" data-aos="fade-left"><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></h2>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
                     <li><span>이름</span> : 최지수</li>
@@ -154,7 +163,7 @@
         <!-- 스킬 --> 
         <section id="skill" class="paddingT50 paddingB50">
             <div class="wrap">
-                <h2 class="h2"><span>S</span><span>K</span><span>I</span><span>L</span><span>L</span></h2>
+                <h2 class="h2" data-aos="fade-right"><span>S</span><span>K</span><span>I</span><span>L</span><span>L</span></h2>
                 <div class="left">
                     <div class="bar">
                         <div class="skill">HTML5</div>
@@ -217,7 +226,7 @@
         </section>
         <!-- 포트폴리오 -->
         <section id="portfolio" class="paddingT50 paddingB50 vh100">
-            <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50">
+            <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" data-aos="flip-left">
                 <h2 class="h2"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></h2>
                 <div class=" portAni flex">
                     <div class="port port1">
@@ -309,7 +318,7 @@
         </section>
         <!-- 컨택 -->
         <section id="contact" class="flex paddingT50 paddingB50 vh100">
-            <div class="wrap paddingT50  paddingB50">
+            <div class="wrap paddingT50  paddingB50" data-aos="flip-right">
                 <h2 class="h2"><span>C</span><span>O</span><span>N</span><span>T</span><span>A</span><span>C</span><span>T</span></h2>
                 <p class="p">끝까지 봐주셔서 감사합니다 아직 부족 하지만 더욱 성장하는 모습을 보여드리겠습니다</p>
                 <ul class="flex">
