--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         }
     )
     </script>
+
     <!-- 슬릭 -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
@@ -114,6 +115,7 @@
             }
         );
     </script>
+
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -124,6 +126,9 @@
     </script>
 
 </head>
+
+
+
 <body>
     <!-- 상단영역 -->
     <header>
@@ -226,7 +231,7 @@
         </section>
         <!-- 포트폴리오 -->
         <section id="portfolio" class="paddingT50 paddingB50 vh100">
-            <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" data-aos="flip-left">
+            <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" data-aos="flip-left" data-aos-duration="2000">
                 <h2 class="h2"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></h2>
                 <div class=" portAni flex">
                     <div class="port port1">
@@ -318,7 +323,7 @@
         </section>
         <!-- 컨택 -->
         <section id="contact" class="flex paddingT50 paddingB50 vh100">
-            <div class="wrap paddingT50  paddingB50" data-aos="flip-right">
+            <div class="wrap paddingT50  paddingB50" data-aos="flip-right" data-aos-duration="2000">
                 <h2 class="h2"><span>C</span><span>O</span><span>N</span><span>T</span><span>A</span><span>C</span><span>T</span></h2>
                 <p class="p">끝까지 봐주셔서 감사합니다 아직 부족 하지만 더욱 성장하는 모습을 보여드리겠습니다</p>
                 <ul class="flex">
