--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="JISU's PORTFOLIO::예비웹퍼블리셔">
     <meta name="description" content="웹퍼블리셔 취업을 위한 개인 포트폴리오 사이트">
     <meta name="keywords" content="개인포트폴리오 웹디자인 웹퍼블리셔 개인홈페이지">
-    <meta name="og:image" content="https://jwdy02.github.io/img/eng3.png">
+    <meta name="og:image" content="https://raw.githubusercontent.com/jwdy02/portfolio/img/titleimg.png">
 
     <title>JISU's PORTFOLIO::예비웹퍼블리셔</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -154,7 +154,8 @@
         <!-- 어바웃 -->
         <section id="about" class="paddingT50 paddingB50 vh100">
             <div class="wrap">
-                <h2 class="h2" data-aos="fade-left"><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></h2>
+                <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">
+                    <span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></h2>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
                     <li><span>이름</span> : 최지수</li>
@@ -168,7 +169,8 @@
         <!-- 스킬 --> 
         <section id="skill" class="paddingT50 paddingB50">
             <div class="wrap">
-                <h2 class="h2" data-aos="fade-right"><span>S</span><span>K</span><span>I</span><span>L</span><span>L</span></h2>
+                <h2 class="h2" data-aos="fade-right" data-aos-duration="2000">
+                    <span>S</span><span>K</span><span>I</span><span>L</span><span>L</span></h2>
                 <div class="left">
                     <div class="bar">
                         <div class="skill">HTML5</div>
