--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
     <!-- 타이틀영역 -->
     <div id="title">
         <div class="wrap">
-            <h2 class="h2"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></h2>
+            <h2 class="h2">
+                <span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span>
+            </h2>
         </div>
     </div>
 <!-- 메인영역 -->
@@ -154,8 +156,7 @@
         <!-- 어바웃 -->
         <section id="about" class="paddingT50 paddingB50 vh100">
             <div class="wrap">
-                <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">
-                    <span>A</span><span>B</span><span>O</span><span>U</span><span>T</span></h2>
+                <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
                     <li><span>이름</span> : 최지수</li>
@@ -169,8 +170,7 @@
         <!-- 스킬 --> 
         <section id="skill" class="paddingT50 paddingB50">
             <div class="wrap">
-                <h2 class="h2" data-aos="fade-right" data-aos-duration="2000">
-                    <span>S</span><span>K</span><span>I</span><span>L</span><span>L</span></h2>
+                <h2 class="h2" data-aos="fade-right" data-aos-duration="1000">SKILL</h2>
                 <div class="left">
                     <div class="bar">
                         <div class="skill">HTML5</div>
@@ -234,7 +234,7 @@
         <!-- 포트폴리오 -->
         <section id="portfolio" class="paddingT50 paddingB50 vh100">
             <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" data-aos="flip-left" data-aos-duration="2000">
-                <h2 class="h2"><span>P</span><span>O</span><span>R</span><span>T</span><span>F</span><span>O</span><span>L</span><span>I</span><span>O</span></h2>
+                <h2 class="h2">PORTFOLIO</h2>
                 <div class=" portAni flex">
                     <div class="port port1">
                         <h3>Accuniq</h3>
@@ -326,7 +326,7 @@
         <!-- 컨택 -->
         <section id="contact" class="flex paddingT50 paddingB50 vh100">
             <div class="wrap paddingT50  paddingB50" data-aos="flip-right" data-aos-duration="2000">
-                <h2 class="h2"><span>C</span><span>O</span><span>N</span><span>T</span><span>A</span><span>C</span><span>T</span></h2>
+                <h2 class="h2">CONTACT</h2>
                 <p class="p">끝까지 봐주셔서 감사합니다 아직 부족 하지만 더욱 성장하는 모습을 보여드리겠습니다</p>
                 <ul class="flex">
                     <li>010-0000-0000</li>
