--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script>
         $(document).ready(function(){
-        // aside
+        // aside 클릭하면 css적용
             $("aside ul li:nth-child(1)").addClass("side");
             $("aside ul li").click(function(){
                     $(this).addClass("side");
                     $(this).siblings().removeClass("side");
                 }
             );
+
+            //top버튼 클릭하면 스크롤 위로
+            $("section#contact .top").click(function(){
+                $("html,body").animate({scrollTop:"0px"},1500);
+                return false;
+            });
+
         //스크롤이벤트
             $(window).scroll(function(){//창을 스크롤하면 실행
-            //스크롤 내리면 헤더 위로 올라가기
+            //스크롤 내리면 헤더 위로 사라지기
                 if($(window).scrollTop()>$("header").height()){
                     //윈도우의 scrollTop 위치값이 ...보다 크다면
                     $("header").addClass("headerUP");
@@ -52,51 +59,112 @@
                 }else{//조건이 안맞는경우 실행함(윈도우의 윈도우의 scrollTop 위치값이 ...보다 작다면 )
                     $("header").removeClass("headerUP");
                 }
-
-            });
-        //top버튼 클릭하면 실행하시오
-            $("footer .top").click(function(){
-                $("html,body").animate({scrollTop:"0px"},1500);
-                return false;
-            });
-
-        //대메뉴클릭시 페이지스크롤링 이동
-            //about
-            $("header ul li:nth-child(1) a, aside ul li:nth-child(1)").click(
-                function(){
-                    $("html,body").animate({scrollTop:$(window).height()},1500);
+            //타이틀진입시 어사이드 클래스 적용
+                if($(window).scrollTop()<$("#title").height()){
                     $("aside ul li:nth-child(1)").addClass("side");
                     $("aside ul li").not(":nth-child(1)").removeClass("side");
+                }else{
+                    $("aside ul li:nth-child(1)").removeClass("side");
+                }
+            //어바웃 진입시 어사이드 클래스 적용
+                if($(window).scrollTop()>=$("#title").height()){
+                    $("aside ul li:nth-child(2)").addClass("side");
+                    $("aside ul li").not(":nth-child(2)").removeClass("side");
+                }else{
+                    $("aside ul li:nth-child(2)").removeClass("side");
+                }
+            //스킬 진입시 어사이드 클래스 적용
+                if($(window).scrollTop()>=$("#title").height()+$("#about").height()){
+                    $("aside ul li:nth-child(3)").addClass("side");
+                    $("aside ul li").not(":nth-child(3)").removeClass("side");
+                }else{
+                    $("aside ul li:nth-child(3)").removeClass("side");
+                }
+            //포트폴리오 진입시 어사이드 클래스 적용
+            if($(window).scrollTop()>=$("#title").height()+$("#about").height()+$("#skill").height()){
+                    $("aside ul li:nth-child(4)").addClass("side");
+                    $("aside ul li").not(":nth-child(4)").removeClass("side");
+                }else{
+                    $("aside ul li:nth-child(4)").removeClass("side");
+                }
+            //컨택 진입시 어사이드 클래스 적용
+            if($(window).scrollTop()>=$("#title").height()+$("#about").height()+$("#skill").height()+$("#portfolio").height()){
+                    $("aside ul li:nth-child(5)").addClass("side");
+                    $("aside ul li").not(":nth-child(5)").removeClass("side");
+                }else{
+                    $("aside ul li:nth-child(5)").removeClass("side");
+                }
+            });
+
+
+
+        //대메뉴클릭시 페이지 이동
+            //about
+            $("header ul li:nth-child(1)").click(
+                function(){
+                    $("html,body").animate({scrollTop:$(window).height()},1000);
                     return false;
                 }
             );
             //skill
-            $("header ul li:nth-child(2) a, aside ul li:nth-child(2)").click(
+            $("header ul li:nth-child(2)").click(
                 function(){
-                    $("html,body").animate({scrollTop:$(window).height()*2},1500);
-                    $("aside ul li:nth-child(2)").addClass("side");
-                    $("aside ul li").not(":nth-child(2)").removeClass("side");
-                    return false; 
-                }
-            );
-            //portfolio
-            $("header ul li:nth-child(3) a, aside ul li:nth-child(3)").click(
-                function(){
-                    $("html,body").animate({scrollTop:$(window).height()*3},1500);
-                    $("aside ul li:nth-child(3)").addClass("side");
-                    $("aside ul li").not(":nth-child(3)").removeClass("side");
+                    $("html,body").animate({scrollTop:$(window).height()*2},1000);
                     return false;
                 }
             );
             //portfolio
-            $("header ul li:nth-child(4) a, aside ul li:nth-child(4)").click(
+            $("header ul li:nth-child(3)").click(
                 function(){
-                    $("html,body").animate({scrollTop:$(window).height()*4},1500);
-                    $("aside ul li:nth-child(4)").addClass("side");
-                    $("aside ul li").not(":nth-child(4)").removeClass("side");
+                    $("html,body").animate({scrollTop:$(window).height()*3},1000);
                     return false;
                 }
             );
+            //contact
+            $("header ul li:nth-child(4)").click(
+                function(){
+                    $("html,body").animate({scrollTop:$(window).height()*4},1000);
+                    return false;
+                }
+            );
+
+
+        //어사이드 클릭시 페이지 이동
+            //title어사이드
+            $("aside ul li:nth-child(1)").click(function(){
+                    $("html,body").animate({scrollTop:"0px"},1000);
+                    $(this).addClass("side");
+                    $("aside ul li").not(":nth-child(1)").removeClass("side");
+                    return false;
+                });
+            //about어사이드
+            $("aside ul li:nth-child(2)").click(function(){
+                $("html,body").animate({scrollTop:$(window).height()},1000);
+                $(this).addClass("side");
+                $("aside ul li").not(":nth-child(2)").removeClass("side");
+                return false;
+            });
+            //skill 어사이드
+            $("aside ul li:nth-child(3)").click(function(){
+                $("html,body").animate({scrollTop:$(window).height()*2},1000);
+                $(this).addClass("side");
+                $("aside ul li").not(":nth-child(3)").removeClass("side");
+                return false;
+            });
+            //portfolio 어사이드
+            $("aside ul li:nth-child(4)").click(function(){
+                $("html,body").animate({scrollTop:$(window).height()*3},1000);
+                $(this).addClass("side");
+                $("aside ul li").not(":nth-child(4)").removeClass("side");
+                return false;
+            });
+            //contact 어사이드
+            $("aside ul li:nth-child(5)").click(function(){
+                $("html,body").animate({scrollTop:$(window).height()*4},1000);
+                $(this).addClass("side");
+                $("aside ul li").not(":nth-child(5)").removeClass("side");
+                return false;
+            });
         }
     )
     </script>
@@ -341,11 +409,13 @@
                     <li>xxx@naver.com</li>
                 </ul>
             </div>
+            <a class="top" href="">TOP</a>
         </section>
     </main>
-    <!-- 우측슬라이드아이콘 -->
+    <!-- 우측슬라이드 -->
     <aside>
         <ul>
+            <li><a href="">title</a></li>
             <li><a href="">about</a></li>
             <li><a href="">skill</a></li>
             <li><a href="">portfolio</a></li>
@@ -357,7 +427,6 @@
         <div class="wrap">
             <p>본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로 제작되었습니다.</p>
         </div>
-        <a class="top" href="">TOP</a>
     </footer>
 </body>
 </html>
