--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
         </section>
         <!-- 스킬 --> 
-        <section id="skill" class="paddingT50 paddingB50 https://padlet.com/wpservice21/padlet-cocux0gobndewmqjvh100">
+        <section id="skill" class="paddingT50 paddingB50 vh100">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-right" data-aos-duration="1000">SKILL</h2>
                 <div class="left">
