--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <!-- 메인영역 -->
     <main>
         <!-- 어바웃 -->
-        <section id="about" class="paddingT50 paddingB50 vh100">
+        <section id="about" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
                 <img src="img/about.png" alt="내사진">
@@ -227,7 +227,7 @@
             </div>
         </section>
         <!-- 스킬 --> 
-        <section id="skill" class="paddingT50 paddingB50 vh100">
+        <section id="skill" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-right" data-aos-duration="1000">SKILL</h2>
                 <div class="left">
@@ -291,7 +291,7 @@
                     <li>젠코딩</li> -->
         </section>
         <!-- 포트폴리오 -->
-        <section id="portfolio" class="paddingT50 paddingB50 vh100">
+        <section id="portfolio" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" >
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">PORTFOLIO</h2>
                 <div class=" portAni flex">
@@ -383,7 +383,7 @@
             </div>
         </section>
         <!-- 컨택 -->
-        <section id="contact" class="flex paddingT50 paddingB50 vh100">
+        <section id="contact" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap paddingT50  paddingB50" data-aos="flip-right" data-aos-duration="2000">
                 <h2 class="h2">CONTACT</h2>
                 <p class="p">끝까지 봐주셔서 감사합니다 아직 부족 하지만 더욱 성장하는 모습을 보여드리겠습니다</p>
