--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     )
     </script>
 
-    <!-- 슬릭 -->
+<!-- 슬릭 -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -192,7 +192,7 @@
         );
     </script>
 
-    <!-- AOS -->
+<!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
@@ -206,7 +206,7 @@
 
 
 <body>
-    <!-- 상단영역 -->
+<!-- 상단영역 -->
     <header>
         <div class="wrap">
             <h1><a href="#">JISU's PORTFOLIO</a></h1>
@@ -219,7 +219,7 @@
             <a href="#">메뉴보기</a>
         </div>
     </header>
-    <!-- 타이틀영역 -->
+<!-- 타이틀영역 -->
     <div id="title">
         <div class="wrap">
             <h2 class="h2">
@@ -229,7 +229,7 @@
     </div>
 <!-- 메인영역 -->
     <main>
-        <!-- 어바웃 -->
+    <!-- 어바웃 -->
         <section id="about" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
@@ -243,7 +243,7 @@
                 </ul>
             </div>
         </section>
-        <!-- 스킬 --> 
+     <!-- 스킬 --> 
         <section id="skill" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-right" data-aos-duration="1000">SKILL</h2>
@@ -255,31 +255,37 @@
                         </div>
                     </div>
                     <div class="bar">
-                        <div class="skill">CSS</div>
+                        <div class="skill">CSS3</div>
                         <div class="outer">
                             <div class="inner" style="width:80%;"></div>
                         </div>
                     </div>
                     <div class="bar">
-                        <div class="skill">Javascript</div>
+                        <div class="skill">Javascript / jQuery</div>
                         <div class="outer">
-                            <div class="inner" style="width:10%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">jQuery</div>
-                        <div class="outer">
-                            <div class="inner" style="width:20%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">Visual studio</div>
-                        <div class="outer">
-                            <div class="inner" style="width:60%;"></div>
+                            <div class="inner" style="width:30%;"></div>
                         </div>
                     </div>
                     <div class="bar">
                         <div class="skill">젠코딩</div>
+                        <div class="outer">
+                            <div class="inner" style="width:50%;"></div>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <div class="skill">SASS</div>
+                        <div class="outer">
+                            <div class="inner" style="width:80%;"></div>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <div class="skill">AOS</div>
+                        <div class="outer">
+                            <div class="inner" style="width:50%;"></div>
+                        </div>
+                    </div>
+                    <div class="bar">
+                        <div class="skill">Visual studio</div>
                         <div class="outer">
                             <div class="inner" style="width:60%;"></div>
                         </div>
@@ -296,6 +302,12 @@
                             <div class="inner" style="width:80%;"></div>
                         </div>
                     </div>
+                    <div class="bar">
+                        <div class="skill">카카오 오븐</div>
+                        <div class="outer">
+                            <div class="inner" style="width:90%;"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
                 <!-- <li>Photoshop</li>
@@ -307,7 +319,7 @@
                     <li>Visual studio</li>
                     <li>젠코딩</li> -->
         </section>
-        <!-- 포트폴리오 -->
+    <!-- 포트폴리오 -->
         <section id="portfolio" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" >
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">PORTFOLIO</h2>
@@ -399,7 +411,7 @@
                 </div>
             </div>
         </section>
-        <!-- 컨택 -->
+    <!-- 컨택 -->
         <section id="contact" class="flex column center paddingT50 paddingB50 vh100">
             <div class="wrap paddingT50  paddingB50" data-aos="flip-right" data-aos-duration="2000">
                 <h2 class="h2">CONTACT</h2>
