--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf1-accuniq/">VIEW</a>
@@ -342,7 +342,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf2-lpoint/">VIEW</a>
@@ -354,7 +354,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper/">VIEW</a>
@@ -366,7 +366,7 @@
                             <li><span>TYPE</span>반응형 웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper-re/">VIEW</a>
@@ -378,7 +378,7 @@
                             <li><span>TYPE</span>반응형 웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf4-Hitejinro/">VIEW</a>
@@ -390,7 +390,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/final-kitchen/">VIEW</a>
@@ -402,7 +402,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/hanwha/">VIEW</a>
@@ -414,7 +414,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javaascrit, jqurey, adobe</span></li>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/beanpole/">VIEW</a>
