--- a/index.html
+++ b/index.html
@@ -468,12 +468,24 @@
                         <a class="button" href="https://jwdy02.github.io/beanpole/">VIEW</a>
                         <img src="img/beanpole.png" alt="beanpole홈페이지">
                     </div>
+                    <!-- <div class="port port9">
+                        <h3>SM-Entertainment </h3>
+                        <ul class="list">
+                            <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
+                            <li><span>PAGE</span>index</li>
+                            <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
+                                <span class="under">javascrpit, jqurey, adobe</span></li>
+                            <li><span>work</span>퍼블리싱 100%</li>
+                        </ul>
+                        <a class="button" href="https://jwdy02.github.io/SM-Entertainment/">VIEW</a>
+                        <img src="" alt="sm엔터테인먼트홈페이지">
+                    </div> -->
                 </div>
             </div>
         </section>
     <!-- 컨택 -->
         <section id="contact" class="flex column center paddingT50 paddingB50 vh100 box">
-            <div class="wrap paddingT50  paddingB50" data-aos="flip-right" data-aos-duration="2000">
+            <div class="wrap paddingT50  paddingB50">
                 <h2 class="h2">CONTACT</h2>
                 <p class="p">끝까지 봐주셔서 감사합니다 아직 부족 하지만 더욱 성장하는 모습을 보여드리겠습니다</p>
                 <ul class="flex">
