--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
                         <a class="button" href="https://jwdy02.github.io/beanpole/">VIEW</a>
                         <img src="img/beanpole.png" alt="beanpole홈페이지">
                     </div>
-                    <!-- <div class="port port9">
-                        <h3>SM-Entertainment </h3>
+                    <div class="port port9">
+                        <h3>SM-Entertainment</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
@@ -478,8 +478,8 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/SM-Entertainment/">VIEW</a>
-                        <img src="" alt="sm엔터테인먼트홈페이지">
-                    </div> -->
+                        <img src="img/SM-Entertainment.png" alt="sm엔터테인먼트홈페이지">
+                    </div>
                 </div>
             </div>
         </section>
