--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         });
     </script>
 
+
 </head>
 
 
@@ -281,11 +282,15 @@
         <section id="about" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
+                <p>" 안녕하세요! 예비 웹퍼블리셔 최지수입니다.<br>
+                    저는 사용자 경험을 개선하고 효과적인 디자인으로<br>
+                    웹페이지를 만드는 것에 흥미를 느끼고 있습니다.<br>
+                    함께 협력하고 성장 할 수 있는 기회를 주신다면<br>
+                    최선을 다해 업무에 기여하고, 배우고, 노력하겠습니다 "</p>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
                     <li>이름 : <span>최지수</span></li>
-                    <li>생년월일 : <span>1xxx0x1x</span></li>
-                    <li>거주지 : <span>경기도 성남시</span></li>
+                    <li>생년월일 : <span>xxxx.xx.xx</span></li>
                     <li>학력 : <span>신구대학교 원예디자인과 플로리스트전공</span></li>
                     <li>교육 : <span>모란 이젠it아카데미 웹디자인,웹퍼블리셔 5개월 과정 수료</span></li>
                 </ul>
