--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
                 <p>" 안녕하세요! 예비 웹퍼블리셔 최지수입니다.<br>
-                    저는 사용자 경험을 개선하고 효과적인 디자인으로<br>
-                    웹페이지를 만드는 것에 흥미를 느끼고 있습니다.<br>
-                    함께 협력하고 성장 할 수 있는 기회를 주신다면<br>
-                    최선을 다해 업무에 기여하고, 배우고, 노력하겠습니다 "</p>
+                    저는 원래도 디자인 분야에 관심과 흥미가 많았지만<br>
+                    이번에 웹퍼블리싱의 매력을 느껴 도전 하고자 합니다.<br>
+                    웹퍼블리셔로서 성장 할 수 있는 기회를 주신다면<br>
+                    최선을 다해 배우고, 협력하고, 노력하겠습니다 "</p>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
                     <li>이름 : <span>최지수</span></li>
