--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
                 <p>" 안녕하세요! 예비 웹퍼블리셔 최지수입니다.<br>
-                    저는 원래도 디자인 분야에 관심과 흥미가 많았지만<br>
+                    저는 원래 디자인 분야에 관심과 흥미가 많았지만<br>
                     이번에 웹퍼블리싱의 매력을 느껴 도전 하고자 합니다.<br>
                     웹퍼블리셔로서 성장 할 수 있는 기회를 주신다면<br>
                     최선을 다해 배우고, 협력하고, 노력하겠습니다 "</p>
