--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
                 <p>" 안녕하세요! 도전하고 발전하는 예비 웹퍼블리셔 최지수입니다.<br>
-                    시각적 경험과 사용자 경험으로 웹페이지를 만드는<br>
+                    시각적 접점과 사용자 경험으로 웹페이지를 만드는<br>
                     웹퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
                     웹퍼블리셔로서 성장할 수 있는 기회를 주신다면<br>
                     최선을 다해 배우고, 협력하고, 성장하겠습니다! "</p>
