--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                         <img src="img/beanpole.png" alt="beanpole홈페이지">
                     </div>
                     <div class="port port9">
-                        <h3>SM-Entertainment</h3>
+                        <h3>SM Entertainment</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
