--- a/index.html
+++ b/index.html
@@ -282,17 +282,17 @@
         <section id="about" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
-                <p>" 안녕하세요! 도전하고 발전하는 예비 웹퍼블리셔 최지수입니다.<br>
-                    시각적 접점과 사용자 경험으로 웹페이지를 만드는<br>
+                <p>" 안녕하세요! 도전하고 발전하는 <span>예비웹퍼블리셔 최지수</span>입니다.<br>
+                    <span>시각적 접점</span>과 <span>사용자 경험</span>으로 웹페이지를 만드는<br>
                     웹퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
                     웹퍼블리셔로서 성장할 수 있는 기회를 주신다면<br>
-                    최선을 다해 배우고, 협력하고, 성장하겠습니다! "</p>
+                    최선을 다해 <span>배우고</span>, <span>협력</span>하고, <span>성장</span>하겠습니다! "</p>
                 <img src="img/about.png" alt="내사진">
                 <ul class="list">
                     <li>이름 : <span>최지수</span></li>
                     <li>생년월일 : <span>xxxx.xx.xx</span></li>
                     <li>학력 : <span>신구대학교 원예디자인과 플로리스트전공</span></li>
-                    <li>교육 : <span>모란 이젠it아카데미 웹디자인,웹퍼블리셔 5개월 과정 수료</span></li>
+                    <li>교육 : <span>모란 이젠it아카데미 웹디자인, 웹퍼블리셔 5개월 과정 수료</span></li>
                 </ul>
             </div>
         </section>
